; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c___superblock_all_zeroes.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c___superblock_all_zeroes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_block_manager = type { i32 }
%struct.dm_block = type { i32 }

@THIN_SUPERBLOCK_LOCATION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dm_block_manager*, i32*)* @__superblock_all_zeroes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__superblock_all_zeroes(%struct.dm_block_manager* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dm_block_manager*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.dm_block*, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.dm_block_manager* %0, %struct.dm_block_manager** %4, align 8
  store i32* %1, i32** %5, align 8
  %12 = call i64 @cpu_to_le64(i32 0)
  store i64 %12, i64* %10, align 8
  %13 = load %struct.dm_block_manager*, %struct.dm_block_manager** %4, align 8
  %14 = call i32 @dm_bm_block_size(%struct.dm_block_manager* %13)
  %15 = sext i32 %14 to i64
  %16 = udiv i64 %15, 8
  %17 = trunc i64 %16 to i32
  store i32 %17, i32* %11, align 4
  %18 = load %struct.dm_block_manager*, %struct.dm_block_manager** %4, align 8
  %19 = load i32, i32* @THIN_SUPERBLOCK_LOCATION, align 4
  %20 = call i32 @dm_bm_read_lock(%struct.dm_block_manager* %18, i32 %19, i32* null, %struct.dm_block** %8)
  store i32 %20, i32* %6, align 4
  %21 = load i32, i32* %6, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %2
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %3, align 4
  br label %50

25:                                               ; preds = %2
  %26 = load %struct.dm_block*, %struct.dm_block** %8, align 8
  %27 = call i64* @dm_block_data(%struct.dm_block* %26)
  store i64* %27, i64** %9, align 8
  %28 = load i32*, i32** %5, align 8
  store i32 1, i32* %28, align 4
  store i32 0, i32* %7, align 4
  br label %29

29:                                               ; preds = %44, %25
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %11, align 4
  %32 = icmp ult i32 %30, %31
  br i1 %32, label %33, label %47

33:                                               ; preds = %29
  %34 = load i64*, i64** %9, align 8
  %35 = load i32, i32* %7, align 4
  %36 = zext i32 %35 to i64
  %37 = getelementptr inbounds i64, i64* %34, i64 %36
  %38 = load i64, i64* %37, align 8
  %39 = load i64, i64* %10, align 8
  %40 = icmp ne i64 %38, %39
  br i1 %40, label %41, label %43

41:                                               ; preds = %33
  %42 = load i32*, i32** %5, align 8
  store i32 0, i32* %42, align 4
  br label %47

43:                                               ; preds = %33
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %7, align 4
  %46 = add i32 %45, 1
  store i32 %46, i32* %7, align 4
  br label %29

47:                                               ; preds = %41, %29
  %48 = load %struct.dm_block*, %struct.dm_block** %8, align 8
  %49 = call i32 @dm_bm_unlock(%struct.dm_block* %48)
  store i32 %49, i32* %3, align 4
  br label %50

50:                                               ; preds = %47, %23
  %51 = load i32, i32* %3, align 4
  ret i32 %51
}

declare dso_local i64 @cpu_to_le64(i32) #1

declare dso_local i32 @dm_bm_block_size(%struct.dm_block_manager*) #1

declare dso_local i32 @dm_bm_read_lock(%struct.dm_block_manager*, i32, i32*, %struct.dm_block**) #1

declare dso_local i64* @dm_block_data(%struct.dm_block*) #1

declare dso_local i32 @dm_bm_unlock(%struct.dm_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
